# synq

./: .gitignore  CMakeLists.txt
csd/: CMakeLists.txt  csd.cpp  csd.h  main.cpp
docs/: Doxyfile
include/: IASTnode.h  csd.h  csdNode.h  ctrl_qubit_gate.h  diagonalGateNode.h  iast.h  nodeVisitor.h  one_qubit_gate.h  qsd.h  qsdNode.h  qspUcrNode.h  randomUnitary.h  ryNode.h  rzNode.h  twoQubitsUnitary.h  ucRotationNode.h  ucrNode.h  ucryNode.h  ucrzNode.h  unitary.h  unitaryGateNode.h
src/: IASTnode.cpp  csd.cpp  csdNode.cpp  ctrl_qubit_gate.cpp  diagonalGateNode.cpp  iast.cpp  nodeVisitor.cpp  one_qubit_gate.cpp  qsd.cpp  qsdNode.cpp  qspUcrNode.cpp  randomUnitary.cpp  ryNode.cpp  rzNode.cpp  twoQubitsUnitary.cpp  ucRotationNode.cpp  ucrNode.cpp  ucryNode.cpp  ucrzNode.cpp  unitary.cpp  unitaryGateNode.cpp
test/: test_csd.cpp  test_diagonal.cpp  test_mcgates.cpp  test_one_qubit.cpp  test_qsd.cpp  test_qsp.cpp  test_rnd_unitary.cpp  test_unitary.cpp
